src/objects/LeanData__Round_Robin_Pool__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Capping_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Frequency__c</fullName>
        <label>Capping Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Limit__c</fullName>
        <label>Capping Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Reset__c</fullName>
        <label>Capping Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Type__c</fullName>
        <label>Capping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Current_Order_Position__c</fullName>
        <label>Current Order Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Current_Weight_Value__c</fullName>
        <label>Current Weight Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Grouping_Name__c</fullName>
        <label>Grouping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Holidays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Set</label>
        <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Pool Holiday Set</relationshipLabel>
        <relationshipName>Pool_Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Business Unit</label>
        <referenceTo>LeanData__LD_Business_Unit__c</referenceTo>
        <relationshipLabel>Round Robin LD Business Unit</relationshipLabel>
        <relationshipName>Round_Robin_LD_Business_Unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_OwnerId_Routed_To__c</fullName>
        <label>Last OwnerId Routed To</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Saved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Saved By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Pool Last Saved By</relationshipLabel>
        <relationshipName>Pool_Last_Saved_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Saved_Date__c</fullName>
        <label>Last Saved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Manual_Next_OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Pool_Type__c</fullName>
        <label>Pool Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Respect_Holiday_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Respect Holiday Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Respect_Pausing_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Respect Pausing Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Respect_User_Schedules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respect User Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Respect_Vacation_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Respect Vacation Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Respect_Working_Hours_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Respect Working Hours Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Use_Owner_Timezone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Owner&apos;s Timezone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Weighting_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weighting Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Working_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Set</label>
        <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Pool Working Hours</relationshipLabel>
        <relationshipName>Pool_Working_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Round Robin Pool</label>
    <nameField>
        <label>Round Robin Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>